console: Make sure button contents are never wrapped

--- a/pkg/webui/components/button/button.styl
+++ b/pkg/webui/components/button/button.styl
@@ -20,6 +20,7 @@ $button($color)
   font-weight: 600
   cursor: pointer
   color: white
+  white-space: nowrap
 
   &:not(:last-child)
     margin-right: $cs.s
